--- a/css/assetsmin.css
+++ b/css/assetsmin.css
@@ -1,1 +1,267 @@
-@import"https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap";@import"https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap";.navbar-container{background-color:#023e8a;display:flex;justify-content:end;width:100%;height:4rem;align-items:center;position:relative;padding:0 2rem}.navbar-container img{position:absolute;width:4rem;top:20px;left:20px}.navbar-container li{font-size:14px;list-style:none;display:inline-block;margin:1rem;transition:.3s;text-transform:uppercase;font-weight:600}.navbar-container li:hover{transform:scale(1.1)}.navbar-container li a{text-decoration:none;color:#fff}.navbar-container li a.default-btn{background-color:#fff;padding:10px;border-radius:5px;color:#023e8a}@keyframes floatAnimation{0%,100%{transform:translateY(0)}50%{transform:translateY(-20px)}}.aside-container{margin-top:90px;width:100%;height:500px;display:flex;align-items:center;justify-content:space-evenly}.aside-container #main-svg{width:55rem;animation:floatAnimation 4s infinite}.aside-container #text-aside{width:350px;transition:.2s}.aside-container #text-aside:hover{transform:scale(1.05)}.aside-container h2{color:#023e8a;font-size:50px}.aside-container #logomarca-aside{width:100px;display:none}.contact-container{width:100%;height:500px}.services-container{margin-top:100px;padding:5rem 0;background-color:#023e8a}.services-container ul{display:flex;list-style:none;text-align:center;margin:0 auto}.services-container ul li{color:#fff;flex:1 1 200px;padding:40px}.services-container ul li i{font-size:50px;margin-bottom:12px;color:#fff;transition:.3s}.services-container ul li i:hover{transform:scale(1.2)}.services-container ul li h3{margin:0 0 30px 0}.services-container ul li p{line-height:30px;font-family:"Montserrat",sans-serif}@media screen and (max-width: 1024px){.aside-container #main-svg{display:none}.services-container{margin:0;background:#fff}.services-container ul{display:block}.services-container ul li i,.services-container ul li p,.services-container ul li h3{color:#023e8a}}@media screen and (max-width: 600px){.aside-container{display:block;margin-top:200px;text-align:center}.aside-container #logomarca-aside{display:block;margin:70px auto}.navbar-container{justify-content:center}.navbar-container img{display:none}.services-container{padding:0;margin:0;background:#fff}.services-container ul{display:block}.services-container ul li i,.services-container ul li p,.services-container ul li h3{color:#023e8a}}.message-container{width:100%;padding:3rem 0 4rem 0;text-align:center;position:relative}.message-container h3{text-align:center;margin:30px 0;font-size:30px;color:#023e8a}.message-container #cat-svg{width:400px}.message-container .form-container{margin:0 auto}.message-container .form-container input,.message-container .form-container textarea{width:200px;padding:10px 20px;font-size:16px;border-radius:5px;border:1px solid #023e8a;margin:0px 10px 5px}.message-container .form-container input::placeholder{color:#023e8a}.message-container .form-container input:focus{outline:none;border:1px solid #023e8a}.message-container .form-container textarea{display:block;width:470px;height:150px;margin:20px auto 20px auto}.message-container .form-container textarea::placeholder{color:#023e8a}.message-container .form-container textarea:focus{outline:none;color:#023e8a}.message-container .form-container #btn{background-color:#023e8a;border:none;color:#fff;cursor:pointer;transition:.3s}.message-container .form-container #btn:hover{background-color:#fff;color:#023e8a;border:1px #023e8a solid}*{padding:0;margin:0;box-sizing:border-box;font-family:"Montserrat",sans-serif}body{width:100%;height:100%}/*# sourceMappingURL=assetsmin.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
+.navbar-container {
+  background-color: #6c63ff;
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  height: 4rem;
+  align-items: center;
+  position: relative;
+  padding: 0 2rem;
+}
+.navbar-container #logomarca {
+  position: absolute;
+  width: 4rem;
+  top: 20px;
+  left: 20px;
+  color: #fff;
+}
+.navbar-container li {
+  font-size: 14px;
+  list-style: none;
+  display: inline-block;
+  margin: 1rem;
+  transition: 0.3s;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.navbar-container li a {
+  text-decoration: none;
+  color: #fff;
+  position: relative;
+  transition: 0.3s;
+}
+.navbar-container li a:not(.default-btn)::after {
+  content: " ";
+  width: 0%;
+  height: 1px;
+  background-color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: 0.4s;
+}
+.navbar-container li a:hover::after {
+  width: 100%;
+}
+.navbar-container li a.default-btn {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  color: #6c63ff;
+}
+.navbar-container li a.default-btn:hover {
+  background-color: #0077B6;
+  color: #fff;
+}
+
+@keyframes floatAnimation {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+}
+.aside-container {
+  margin-top: 90px;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.aside-container #main-svg {
+  width: 55rem;
+  animation: floatAnimation 4s infinite;
+}
+.aside-container #text-aside {
+  width: 350px;
+  transition: 0.2s;
+}
+.aside-container #text-aside:hover {
+  transform: scale(1.05);
+}
+.aside-container h2 {
+  color: #6c63ff;
+  font-size: 50px;
+}
+.aside-container #logomarca-aside {
+  width: 100px;
+  display: none;
+}
+
+/* aside 2 */
+.contact-container {
+  width: 100%;
+  height: 500px;
+}
+
+.services-container {
+  margin-top: 100px;
+  padding: 5rem 0;
+  background-color: #6c63ff;
+}
+.services-container ul {
+  display: flex;
+  list-style: none;
+  text-align: center;
+  margin: 0 auto;
+}
+.services-container ul li {
+  color: #fff;
+  flex: 1 1 200px;
+  padding: 40px;
+}
+.services-container ul li i {
+  font-size: 50px;
+  margin-bottom: 12px;
+  color: #fff;
+  transition: 0.3s;
+}
+.services-container ul li i:hover {
+  transform: scale(1.2);
+}
+.services-container ul li h3 {
+  margin: 0 0 30px 0;
+}
+.services-container ul li p {
+  line-height: 30px;
+  font-family: "Montserrat", sans-serif;
+}
+
+@media screen and (max-width: 1024px) {
+  .aside-container #main-svg {
+    display: none;
+  }
+  .services-container {
+    margin: 0;
+    background: #fff;
+  }
+  .services-container ul {
+    display: block;
+  }
+  .services-container ul li i, .services-container ul li p, .services-container ul li h3 {
+    color: #6c63ff;
+  }
+}
+@media screen and (max-width: 600px) {
+  .aside-container {
+    display: block;
+    margin-top: 200px;
+    text-align: center;
+  }
+  .aside-container #logomarca-aside {
+    display: block;
+    margin: 70px auto;
+  }
+  .navbar-container {
+    justify-content: center;
+  }
+  .navbar-container img {
+    display: none;
+  }
+  .services-container {
+    padding: 0;
+    margin: 0;
+    background: #fff;
+  }
+  .services-container ul {
+    display: block;
+  }
+  .services-container ul li i, .services-container ul li p, .services-container ul li h3 {
+    color: #6c63ff;
+  }
+}
+.message-container {
+  width: 100%;
+  padding: 3rem 0 4rem 0;
+  margin: 18px 0px;
+  text-align: center;
+  position: relative;
+}
+.message-container h3 {
+  text-align: center;
+  margin: 30px 0;
+  font-size: 30px;
+  color: #6c63ff;
+}
+.message-container #cat-svg {
+  width: 400px;
+}
+.message-container .form-container {
+  margin: 0 auto;
+}
+.message-container .form-container input, .message-container .form-container textarea {
+  width: 200px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #6c63ff;
+  margin: 0px 10px 5px;
+}
+.message-container .form-container input::placeholder {
+  color: #6c63ff;
+}
+.message-container .form-container input:focus {
+  outline: none;
+  border: 1px solid #6c63ff;
+}
+.message-container .form-container textarea {
+  display: block;
+  width: 470px;
+  height: 150px;
+  margin: 20px auto 20px auto;
+}
+.message-container .form-container textarea::placeholder {
+  color: #6c63ff;
+}
+.message-container .form-container textarea:focus {
+  outline: none;
+  color: #6c63ff;
+}
+.message-container .form-container #btn {
+  background-color: #6c63ff;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.message-container .form-container #btn:hover {
+  background-color: #fff;
+  color: #6c63ff;
+  border: 1px #6c63ff solid;
+}
+
+.footer-container {
+  width: 100%;
+  background: #6c63ff;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0 50px;
+}
+.footer-container i {
+  color: white;
+  font-size: 35px;
+  transition: 1s ease;
+}
+.footer-container i:hover {
+  transform: rotate(360deg);
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
+/*# sourceMappingURL=assetsmin.css.map */
