--- a/scss/message.scss
+++ b/scss/message.scss
@@ -3,6 +3,7 @@
 .message-container {
     width: 100%;
     padding: 3rem 0 4rem 0;
+    margin: 18px 0px;
     text-align: center;
     position: relative;
 
