--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -26,12 +26,28 @@
         transition: 0.3s;
         text-transform: uppercase;
         font-weight: 600;
+
+        &#navbar-btn:hover {
+                transform: scale(1.08);
+        }
         
         a{
             text-decoration: none;
             color: $white-color;
             position: relative;
             transition: 0.3s;
+
+            &.default-btn{
+                background-color: $white-color;
+                padding: 10px;
+                border-radius: 5px;
+                color: $dark-blue;
+                position: relative;
+            }
+
+            &.default-btn:hover{
+                transform: scale(1.20);
+            }
 
             &:not(.default-btn)::after {
                 content: " ";   
@@ -46,18 +62,6 @@
 
             &:hover::after {
                 width: 100%;
-            }
-
-            &.default-btn{
-                background-color: $white-color;
-                padding: 10px;
-                border-radius: 5px;
-                color: $dark-blue;
-            }
-
-            &.default-btn:hover{
-                background-color: $medium-blue;
-                color: $white-color;
             }
         }
     }
