--- a/scss/message.scss
+++ b/scss/message.scss
@@ -20,43 +20,73 @@
 
     .form-container {
         margin: 0 auto;
+        position: relative;
         
-        & input, textarea{
+        input, textarea{
             width: 200px;
             padding: 10px 20px;
             font-size: 16px;
             border-radius: 5px;
             border: 1px solid $dark-blue;
             margin: 0px 10px 5px;
-        }
-
-        & input::placeholder{
             color: $dark-blue;
         }
 
-        & input:focus {
+        .input-container{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+
+            .name-input, .email-input {
+                color: $dark-blue;
+                position: relative;
+
+                input {
+                    padding-left: 45px;
+                }
+
+                .email-icon {
+                    position: absolute;
+                    top: 11.5px;
+                    left: 26.5px;
+                }
+
+                .name-icon {
+                    position: absolute;
+                    top: 11px;
+                    left: 28px;
+                }
+            }
+        }
+
+        input::placeholder{
+            color: $dark-blue;
+        }
+
+        input:focus {
             outline: none;
             border: 1px solid $dark-blue;
         }
 
-        & textarea {
+        textarea {
             display: block;
             width: 470px;
             height: 150px;
             margin: 20px auto 20px auto
         }
 
-        & textarea::placeholder {
+        textarea::placeholder {
             color: $dark-blue
         }
 
-        & textarea:focus {
+        textarea:focus {
             outline: none;
             color: $dark-blue
 
         }
 
-        & #btn{
+        #btn{
             background-color: $dark-blue;
             border: none;
             color: $white-color;
@@ -64,7 +94,7 @@
             transition: 0.3s;
         }
 
-        & #btn:hover {
+        #btn:hover {
             background-color: $white-color;
             color: $dark-blue;
             border: 1px $dark-blue solid;
