--- a/scss/aside.scss
+++ b/scss/aside.scss
@@ -17,6 +17,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    gap: 40px;
 
     #main-svg {
         width: 55rem;
