--- a/scss/message.scss
+++ b/scss/message.scss
@@ -44,6 +44,7 @@
 
                 input {
                     padding-left: 45px;
+                    width: 250px;
                 }
 
                 .email-icon {
