--- a/scss/aside.scss
+++ b/scss/aside.scss
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    gap: 40px;
+    gap: 4rem;
 
     #main-svg {
         width: 55rem;
@@ -25,7 +25,7 @@
     }
 
     #text-aside {
-        width: 400px;
+        width: 25rem;
         transition: 0.2s;
     }
 
