--- a/scss/query.scss
+++ b/scss/query.scss
@@ -24,10 +24,10 @@
 
     .aside-container {
         display: block;
-        margin-top: 200px;
+        margin-top: 13rem;
         text-align: center;
         #logomarca-aside {
-        font-size: 25px;
+        font-size: 1.5rem;
         color: $dark-blue;
         display: block;
         margin: 70px auto;
