--- a/css/assetsmin.css
+++ b/css/assetsmin.css
@@ -5,20 +5,20 @@
   display: flex;
   justify-content: end;
   width: 100%;
-  height: 4rem;
+  height: 65px;
   align-items: center;
   position: relative;
   padding: 0 2rem;
 }
 .navbar-container #logomarca {
   position: absolute;
-  width: 4rem;
+  width: 65px;
   top: 20px;
   left: 20px;
   color: #fff;
 }
 .navbar-container li {
-  font-size: 14px;
+  font-size: 0.9rem;
   list-style: none;
   display: inline-block;
   margin: 1rem;
@@ -37,7 +37,7 @@
 }
 .navbar-container li a.default-btn {
   background-color: #fff;
-  padding: 10px;
+  padding: 0.7rem;
   border-radius: 5px;
   color: #6c63ff;
   position: relative;
@@ -75,14 +75,14 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  gap: 40px;
+  gap: 4rem;
 }
 .aside-container #main-svg {
   width: 55rem;
   animation: floatAnimation 4s infinite;
 }
 .aside-container #text-aside {
-  width: 400px;
+  width: 25rem;
   transition: 0.2s;
 }
 .aside-container #text-aside:hover {
@@ -98,7 +98,7 @@
 
 /* aside 2 */
 .services-container {
-  margin-top: 100px;
+  margin-top: 8rem;
   padding: 5rem 0;
   background-color: #6c63ff;
 }
@@ -111,11 +111,11 @@
 .services-container ul li {
   color: #fff;
   flex: 1 1 200px;
-  padding: 40px;
+  padding: 2.5rem;
 }
 .services-container ul li i {
-  font-size: 50px;
-  margin-bottom: 12px;
+  font-size: 3.2rem;
+  margin-bottom: 0.8rem;
   color: #fff;
   transition: 0.3s;
 }
@@ -123,10 +123,10 @@
   transform: scale(1.2);
 }
 .services-container ul li h3 {
-  margin: 0 0 30px 0;
+  margin: 0 0 1.2rem 0;
 }
 .services-container ul li p {
-  line-height: 30px;
+  line-height: 1.8rem;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -148,11 +148,11 @@
 @media screen and (max-width: 600px) {
   .aside-container {
     display: block;
-    margin-top: 200px;
+    margin-top: 13rem;
     text-align: center;
   }
   .aside-container #logomarca-aside {
-    font-size: 25px;
+    font-size: 1.5rem;
     color: #6c63ff;
     display: block;
     margin: 70px auto;
@@ -178,14 +178,14 @@
 .message-container {
   width: 100%;
   padding: 3rem 0 4rem 0;
-  margin: 18px 0px;
+  margin: 1.2rem 0px;
   text-align: center;
   position: relative;
 }
 .message-container h3 {
   text-align: center;
-  margin: 30px 0;
-  font-size: 30px;
+  margin: 2rem 0;
+  font-size: 1.8rem;
   color: #6c63ff;
 }
 .message-container #cat-svg {
@@ -197,25 +197,25 @@
 }
 .message-container .form-container input, .message-container .form-container textarea {
   width: 200px;
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 0.7rem 1.2rem;
+  font-size: 1rem;
   border-radius: 5px;
   border: 1px solid #6c63ff;
-  margin: 0px 10px 5px;
+  margin: 0px 0.7rem 0.3rem;
   color: #6c63ff;
 }
 .message-container .form-container .input-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 8px;
+  gap: 0.2;
 }
 .message-container .form-container .input-container .name-input, .message-container .form-container .input-container .email-input {
   color: #6c63ff;
   position: relative;
 }
 .message-container .form-container .input-container .name-input input, .message-container .form-container .input-container .email-input input {
-  padding-left: 45px;
+  padding-left: 3rem;
   width: 250px;
 }
 .message-container .form-container .input-container .name-input .email-icon, .message-container .form-container .input-container .email-input .email-icon {
@@ -239,7 +239,7 @@
   display: block;
   width: 470px;
   height: 150px;
-  margin: 20px auto 20px auto;
+  margin: 1.7rem auto 1.7rem auto;
 }
 .message-container .form-container textarea::placeholder {
   color: #6c63ff;
@@ -268,7 +268,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0 50px;
+  gap: 0 4rem;
 }
 .footer-container i {
   color: white;
