--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0 50px;
+    gap: 0 4rem;
 
     i {
         color: white;
