--- a/scss/message.scss
+++ b/scss/message.scss
@@ -3,14 +3,14 @@
 .message-container {
     width: 100%;
     padding: 3rem 0 4rem 0;
-    margin: 18px 0px;
+    margin: 1.2rem 0px;
     text-align: center;
     position: relative;
 
     h3 {
         text-align: center;
-        margin: 30px 0;
-        font-size: 30px;
+        margin: 2rem 0;
+        font-size: 1.8rem;
         color: $dark-blue;
     }
 
@@ -24,11 +24,11 @@
         
         input, textarea{
             width: 200px;
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 0.7rem 1.2rem;
+            font-size: 1rem;
             border-radius: 5px;
             border: 1px solid $dark-blue;
-            margin: 0px 10px 5px;
+            margin: 0px 0.7rem 0.3rem;
             color: $dark-blue;
         }
 
@@ -36,14 +36,14 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 8px;
+            gap: 0.2;
 
             .name-input, .email-input {
                 color: $dark-blue;
                 position: relative;
 
                 input {
-                    padding-left: 45px;
+                    padding-left: 3rem;
                     width: 250px;
                 }
 
@@ -74,7 +74,7 @@
             display: block;
             width: 470px;
             height: 150px;
-            margin: 20px auto 20px auto
+            margin: 1.7rem auto 1.7rem auto
         }
 
         textarea::placeholder {
