--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -5,21 +5,21 @@
     display: flex;
     justify-content: end;
     width: 100%;
-    height: 4rem;
+    height: 65px;
     align-items: center;
     position: relative;
     padding: 0 2rem;
 
     #logomarca {
         position: absolute;
-        width: 4rem;
+        width: 65px;
         top: 20px;
         left: 20px;
         color: $white-color;
     }
 
     li{
-        font-size: 14px;
+        font-size: 0.9rem;
         list-style: none;
         display: inline-block;
         margin: 1rem;
@@ -39,7 +39,7 @@
 
             &.default-btn{
                 background-color: $white-color;
-                padding: 10px;
+                padding: 0.7rem;
                 border-radius: 5px;
                 color: $dark-blue;
                 position: relative;
