--- a/scss/message.scss
+++ b/scss/message.scss
@@ -45,6 +45,8 @@
                 input {
                     padding-left: 3rem;
                     width: 250px;
+                    border: transparent;
+                    border-bottom: 1px solid $dark-blue;
                 }
 
                 .email-icon {
