--- a/css/assetsmin.css
+++ b/css/assetsmin.css
@@ -1,296 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
-.navbar-container {
-  background-color: #6c63ff;
-  display: flex;
-  justify-content: end;
-  width: 100%;
-  height: 65px;
-  align-items: center;
-  position: relative;
-  padding: 0 2rem;
-}
-.navbar-container #logomarca {
-  position: absolute;
-  width: 65px;
-  top: 20px;
-  left: 20px;
-  color: #fff;
-}
-.navbar-container li {
-  font-size: 0.9rem;
-  list-style: none;
-  display: inline-block;
-  margin: 1rem;
-  transition: 0.3s;
-  text-transform: uppercase;
-  font-weight: 600;
-}
-.navbar-container li#navbar-btn:hover {
-  transform: scale(1.08);
-}
-.navbar-container li a {
-  text-decoration: none;
-  color: #fff;
-  position: relative;
-  transition: 0.3s;
-}
-.navbar-container li a.default-btn {
-  background-color: #fff;
-  padding: 0.7rem;
-  border-radius: 5px;
-  color: #6c63ff;
-  position: relative;
-}
-.navbar-container li a.default-btn:hover {
-  transform: scale(1.2);
-}
-.navbar-container li a:not(.default-btn)::after {
-  content: " ";
-  width: 0%;
-  height: 1px;
-  background-color: #fff;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  transition: 0.4s;
-}
-.navbar-container li a:hover::after {
-  width: 100%;
-}
-
-@keyframes floatAnimation {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-20px);
-  }
-}
-.aside-container {
-  margin-top: 90px;
-  width: 100%;
-  height: 500px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  gap: 4rem;
-}
-.aside-container #main-svg {
-  width: 55rem;
-  animation: floatAnimation 4s infinite;
-}
-.aside-container #text-aside {
-  width: 25rem;
-  transition: 0.2s;
-}
-.aside-container #text-aside:hover {
-  transform: scale(1.05);
-}
-.aside-container h2 {
-  color: #6c63ff;
-  font-size: 50px;
-}
-.aside-container #logomarca-aside {
-  display: none;
-}
-
-/* aside 2 */
-.services-container {
-  margin-top: 8rem;
-  padding: 5rem 0;
-  background-color: #6c63ff;
-}
-.services-container ul {
-  display: flex;
-  list-style: none;
-  text-align: center;
-  margin: 0 auto;
-}
-.services-container ul li {
-  color: #fff;
-  flex: 1 1 200px;
-  padding: 2.5rem;
-}
-.services-container ul li i {
-  font-size: 3.2rem;
-  margin-bottom: 0.8rem;
-  color: #fff;
-  transition: 0.3s;
-}
-.services-container ul li i:hover {
-  transform: scale(1.2);
-}
-.services-container ul li h3 {
-  margin: 0 0 1.2rem 0;
-}
-.services-container ul li p {
-  line-height: 1.8rem;
-  font-family: "Montserrat", sans-serif;
-}
-
-@media screen and (max-width: 1024px) {
-  .aside-container #main-svg {
-    display: none;
-  }
-  .services-container {
-    margin: 0;
-    background: #fff;
-  }
-  .services-container ul {
-    display: block;
-  }
-  .services-container ul li i, .services-container ul li p, .services-container ul li h3 {
-    color: #6c63ff;
-  }
-}
-@media screen and (max-width: 600px) {
-  .aside-container {
-    display: block;
-    margin-top: 13rem;
-    text-align: center;
-  }
-  .aside-container #logomarca-aside {
-    font-size: 1.5rem;
-    color: #6c63ff;
-    display: block;
-    margin: 70px auto;
-  }
-  .navbar-container {
-    justify-content: center;
-  }
-  .navbar-container #logomarca {
-    display: none;
-  }
-  .services-container {
-    padding: 0;
-    margin: 0;
-    background: #fff;
-  }
-  .services-container ul {
-    display: block;
-  }
-  .services-container ul li i, .services-container ul li p, .services-container ul li h3 {
-    color: #6c63ff;
-  }
-}
-.message-container {
-  width: 100%;
-  padding: 3rem 0 4rem 0;
-  margin: 1.2rem 0px;
-  text-align: center;
-  position: relative;
-}
-.message-container h3 {
-  text-align: center;
-  margin: 2rem 0;
-  font-size: 1.8rem;
-  color: #6c63ff;
-}
-.message-container #cat-svg {
-  width: 400px;
-}
-.message-container .form-container {
-  margin: 0 auto;
-  position: relative;
-}
-.message-container .form-container input, .message-container .form-container textarea {
-  width: 200px;
-  padding: 0.7rem 1.2rem;
-  font-size: 1rem;
-  border-radius: 5px;
-  border: 1px solid #6c63ff;
-  margin: 0px 0.7rem 0.3rem;
-  color: #6c63ff;
-}
-.message-container .form-container .input-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.2;
-}
-.message-container .form-container .input-container .name-input, .message-container .form-container .input-container .email-input {
-  color: #6c63ff;
-  position: relative;
-}
-.message-container .form-container .input-container .name-input input, .message-container .form-container .input-container .email-input input {
-  padding-left: 3rem;
-  width: 250px;
-  border: transparent;
-  border-bottom: 1px solid #6c63ff;
-}
-.message-container .form-container .input-container .name-input .email-icon, .message-container .form-container .input-container .email-input .email-icon {
-  position: absolute;
-  top: 11.5px;
-  left: 26.5px;
-}
-.message-container .form-container .input-container .name-input .name-icon, .message-container .form-container .input-container .email-input .name-icon {
-  position: absolute;
-  top: 11px;
-  left: 28px;
-}
-.message-container .form-container input::placeholder {
-  color: #6c63ff;
-}
-.message-container .form-container input:focus {
-  outline: none;
-  border: 1px solid #6c63ff;
-}
-.message-container .form-container textarea {
-  display: block;
-  width: 470px;
-  height: 150px;
-  margin: 1.7rem auto 1.7rem auto;
-}
-.message-container .form-container textarea::placeholder {
-  color: #6c63ff;
-}
-.message-container .form-container textarea:focus {
-  outline: none;
-  color: #6c63ff;
-}
-.message-container .form-container #btn {
-  background-color: #6c63ff;
-  border: none;
-  color: #fff;
-  cursor: pointer;
-  transition: 0.3s;
-}
-.message-container .form-container #btn:hover {
-  background-color: #fff;
-  color: #6c63ff;
-  border: 1px #6c63ff solid;
-}
-
-.footer-container {
-  width: 100%;
-  background: #6c63ff;
-  height: 5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0 4rem;
-}
-.footer-container i {
-  color: white;
-  font-size: 35px;
-  transition: 1s ease;
-}
-.footer-container i:hover {
-  transform: rotate(360deg);
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-}
-
-/*# sourceMappingURL=assetsmin.css.map */
+@import"https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap";@import"https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap";.navbar-container{background-color:#6c63ff;display:flex;justify-content:end;width:100%;height:65px;align-items:center;position:relative;padding:0 2rem}.navbar-container #logomarca{position:absolute;width:65px;top:20px;left:20px;color:#fff}.navbar-container li{font-size:.9rem;list-style:none;display:inline-block;margin:1rem;transition:.3s;text-transform:uppercase;font-weight:600}.navbar-container li a{text-decoration:none;color:#fff;position:relative;transition:.3s}.navbar-container li a.default-btn{background-color:#fff;padding:.7rem;border-radius:5px;color:#6c63ff;position:relative}.navbar-container li a.default-btn:hover{color:#fff;background-color:#6c63ff;outline:#fff 1px solid}.navbar-container li a:not(.default-btn)::after{content:" ";width:0%;height:1px;background-color:#fff;position:absolute;bottom:0;left:0;transition:.4s}.navbar-container li a:hover::after{width:100%}@keyframes floatAnimation{0%,100%{transform:translateY(0)}50%{transform:translateY(-20px)}}.aside-container{margin-top:90px;width:100%;height:470px;display:flex;align-items:center;justify-content:center;text-align:center;gap:4rem}.aside-container #main-svg{width:55rem;animation:floatAnimation 4s infinite}.aside-container #text-aside{width:25rem;transition:.2s}.aside-container #text-aside:hover{transform:scale(1.05)}.aside-container h2{color:#6c63ff;font-size:50px}.aside-container #logomarca-aside{display:none}.services-container{margin-top:8rem;padding:5rem 0;background-color:#6c63ff}.services-container ul{display:flex;list-style:none;text-align:center;margin:0 auto}.services-container ul li{color:#fff;flex:1 1 200px;padding:2.5rem}.services-container ul li i{font-size:3.2rem;margin-bottom:.8rem;color:#fff;transition:.3s}.services-container ul li i:hover{transform:scale(1.2)}.services-container ul li h3{margin:0 0 1.2rem 0}.services-container ul li p{line-height:1.8rem;font-family:"Montserrat",sans-serif}@media screen and (max-width: 1024px){.aside-container #main-svg{display:none}.services-container{margin:0;background:#fff}.services-container ul{display:block}.services-container ul li i,.services-container ul li p,.services-container ul li h3{color:#6c63ff}}@media screen and (max-width: 600px){.aside-container{display:block;margin-top:13rem;text-align:center}.aside-container #logomarca-aside{font-size:1.5rem;color:#6c63ff;display:block;margin:70px auto}.navbar-container{justify-content:center}.navbar-container #logomarca{display:none}.services-container{padding:0;margin:0;background:#fff}.services-container ul{display:block}.services-container ul li i,.services-container ul li p,.services-container ul li h3{color:#6c63ff}}.message-container{width:100%;padding:3rem 0 4rem 0;margin:.5rem 0px;text-align:center;position:relative}.message-container h3{text-align:center;margin:2rem 0;font-size:1.8rem;color:#6c63ff}.message-container #cat-svg{width:400px}.message-container .form-container{margin:0 auto;position:relative}.message-container .form-container input,.message-container .form-container textarea{width:200px;padding:.7rem 1.2rem;font-size:1rem;border-radius:5px;border:1px solid #6c63ff;margin:0px .7rem .3rem;color:#6c63ff}.message-container .form-container .input-container{display:flex;align-items:center;justify-content:center;gap:.2}.message-container .form-container .input-container .name-input,.message-container .form-container .input-container .email-input{color:#6c63ff;position:relative}.message-container .form-container .input-container .name-input input,.message-container .form-container .input-container .email-input input{padding-left:3rem;width:250px;border:rgba(0,0,0,0);border-bottom:1px solid #6c63ff}.message-container .form-container .input-container .name-input .email-icon,.message-container .form-container .input-container .email-input .email-icon{position:absolute;top:11.5px;left:26.5px}.message-container .form-container .input-container .name-input .name-icon,.message-container .form-container .input-container .email-input .name-icon{position:absolute;top:11px;left:28px}.message-container .form-container input::placeholder{color:#6c63ff}.message-container .form-container input:focus{outline:none;border:1px solid #6c63ff}.message-container .form-container textarea{display:block;width:470px;height:150px;margin:1.7rem auto 1.7rem auto}.message-container .form-container textarea::placeholder{color:#6c63ff}.message-container .form-container textarea:focus{outline:none;color:#6c63ff}.message-container .form-container #btn-submit{background-color:#6c63ff;border:none;color:#fff;cursor:pointer;transition:.3s}.message-container .form-container #btn-submit:hover{background-color:#fff;color:#6c63ff;outline:1px #6c63ff solid}.footer-container{width:100%;background:#6c63ff;height:4.5rem;display:flex;justify-content:center;align-items:center;gap:0 4rem}.footer-container i{color:#fff;font-size:35px;transition:1s ease}.footer-container i:hover{transform:rotate(360deg)}*{padding:0;margin:0;box-sizing:border-box;font-family:"Montserrat",sans-serif}body{width:100%;height:100%}/*# sourceMappingURL=assetsmin.css.map */
