--- a/scss/query.scss
+++ b/scss/query.scss
@@ -34,6 +34,9 @@
         }
     }
     
+    .message-container {
+        padding: 20px;
+    }
     .navbar-container{
         justify-content: center;
         #logomarca {
